[package]
name = "rustretro-plugin"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustretro-procmacro = { path = "../rustretro-procmacro" }
bitflags = { version = "1.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
