[package]
name = "rustretro-wgpu"
version = "0.0.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustretro-plugin = { path = "../rustretro-plugin" }
rustretro-wasmtime-runner = { path = "../rustretro-wasmtime-runner" }
bitflags = "1.2.1"
bytemuck = {version = "1.5.1", features = ["derive"]}
futures = "0.3.15"
native-dialog = "0.5.5"
structopt = "0.3.21"
wgpu = "0.12"
winit = "0.26"

